<resources>
    <string name="app_name">Notifon</string>
    <string name="nextwd">Next Word</string>
    <string name="knowthiswd">Know it</string>
    <string name="edit_translations">Edit translations</string>
    <string name="edit_trunit_word_et">Word</string>
    <string name="edit_trunit_definition_et">Definition</string>
    <string name="edit_trunit_part_of_speech">Part of speech</string>
    <string name="edit_trunit_btn_save">Save</string>
    <string name="changes_saved">Changes saved</string>
    <string name="warning_title_enter_word_definition">Warning</string>
    <string name="warning_contents_enter_word_definition">Please provide all text fields</string>
    <string name="warning_delete_trunit">Are you sure you want to delete this translation?</string>
    <string name="warning_delete_trunit_yes">Yes</string>
    <string name="warning_delete_trunit_no">No</string>
<!--    <string name="search_label">Customers</string>
    <string name="search_hint">Search Customers</string>-->
    <string name="next_word">Next Word for Today</string>
    <string name="title_activity_settings">Settings</string>
    <string name="notifon_service_on">Service is active</string>
    <string name="notifon_service_on_summary">Allow service to work in background and show notifications</string>
    <string name="notifon_period_title">Period for new words notification</string>
    <string name="notifon_last_word_title">Start notifications from this word</string>

    <string name="search_label">s_label</string>
    <string name="search_hint">s_hint</string>

    <string-array name="periods">
        <item>1 mins</item>
        <item>15 mins</item>
        <item>30 mins</item>
        <item>1 hour</item>
        <item>3 hours</item>
    </string-array>
    <string-array name="period_vals">
        <item>1</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
    </string-array>

</resources>
