<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
<!--<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_height="match_parent"
   android:layout_width="match_parent"
    android:id="@+id/main_recycler_view"></android.support.v7.widget.RecyclerView>-->
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:elevation="5dp"
        app:contentPadding="20dp"
        android:id="@+id/card_view_translation"
        android:layout_gravity="center"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="451dp">



            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/diff_select_spinner"
                android:layout_alignParentRight="true"
                ></Spinner>


            <EditText

                android:hint="@string/edit_trunit_word_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/word_edit"
                android:textSize="30sp"
                android:layout_marginTop="30dp"
                android:textStyle="normal|bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />

            <CheckBox
                android:text="@string/knowthiswd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/knowit"
                android:layout_alignBottom="@+id/edit_trunit_btn_save"
                android:layout_alignLeft="@+id/word_edit"
                android:layout_alignStart="@+id/word_edit"
/>

            <EditText
                android:hint="@string/edit_trunit_definition_et"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/definition_et"
                android:layout_below="@+id/partsp_et"/>
            <Button
                android:text="@string/edit_trunit_btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_trunit_btn_save"
                android:layout_marginBottom="13dp"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/diff_select_spinner"
                android:layout_alignEnd="@+id/diff_select_spinner"/>



            <EditText
                android:hint="@string/edit_trunit_part_of_speech"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/partsp_et"
                android:textSize="20sp"
                android:layout_below="@+id/word_edit"
                android:textStyle="normal|italic"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>
