<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
<!--<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_height="match_parent"
   android:layout_width="match_parent"
    android:id="@+id/main_recycler_view"></android.support.v7.widget.RecyclerView>-->


    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="423dp"
        android:layout_margin="5dp"
        android:elevation="5dp"
        app:contentPadding="20dp"
        android:id="@+id/card_view_translation"
        android:layout_gravity="center"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="378dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/diff_image"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/word"

                android:layout_alignBottom="@+id/word"
                />



            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/word"
                android:textSize="30sp"

                android:layout_marginTop="8dp"
                android:textStyle="normal|bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />

            <CheckBox
                android:text="@string/knowthiswd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/knowit"
                android:layout_alignBottom="@+id/next_trunit"
                android:layout_alignLeft="@+id/word"
                android:layout_alignStart="@+id/word"
/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/definition"
                android:layout_below="@+id/partsp"/>

            <Button
                android:text="@string/nextwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/next_trunit"
                android:layout_marginBottom="13dp"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/diff_image"
                android:layout_alignEnd="@+id/diff_image"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/partsp"
                android:textSize="20sp"
                android:layout_below="@+id/word"
                android:textStyle="normal|italic"/>


        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <Button

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/edit_trunits"
        android:drawableLeft="@android:drawable/ic_menu_edit"
        android:text="@string/edit_translations"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"/>


</LinearLayout>
